	src/modules/metric/cerebro_metric_bytesout.c,
	src/modules/metric/cerebro_metric_packetsin.c,
	src/modules/metric/cerebro_metric_packetsout.c ,
	src/modules/metric/cerebro_metric_rxerrs.c,
	src/modules/metric/cerebro_metric_txerrs.c: New files.

	* src/modules/metric/Makefile.am, configure.ac,
	man/cerebro_module.3.in: Adjust appropriately for new metrics.

2006-08-26  Albert Chu  <chu11@llnl.gov>

	* src/modules/metric/cerebro_metric_boottime.c
	(boottime_metric_setup): Cleanup parsing code.

	* src/modules/metric/cerebro_metric_memtotal.c,
	src/modules/metric/cerebro_metric_memused.c,
	src/modules/metric/cerebro_metric_memfree.c,
	src/modules/metric/cerebro_metric_swaptotal.c,
	src/modules/metric/cerebro_metric_swapused.c,
	src/modules/metric/cerebro_metric_swapfree.c,
	config/ac_memory.m4: New files.

	* src/modules/metric/Makefile.am, configure.ac,
	man/cerebro_module.3.in: Adjust appropriately for new metrics.

	* src/cerebrod/cerebrod_config.h: Increase
	CEREBROD_METRIC_MAX_DEFAULT.

	* man/cerebro.conf.5.in: Update appropriately.

	* src/modules/metric/cerebro_metric_loadavg.c,
	src/modules/metric/cerebro_metric_loadavg.h: New files.
	
	* src/modules/metric/cerebro_metric_loadavg1.c,
	src/modules/metric/cerebro_metric_loadavg5.c,
	src/modules/metric/cerebro_metric_loadavg15.c: Adjusted to use
	common function.

	* src/modules/metric/Makefile.am: Adjust for new files.

2006-08-25  Albert Chu  <chu11@llnl.gov>

	Add metric module support for load averages.

	* src/modules/metric/cerebro_metric_loadavg1.c,
	src/modules/metric/cerebro_metric_loadavg5.c,
	src/modules/metric/cerebro_metric_loadavg15.c,
	config/ac_loadavg.m4: New files.
	
	* src/modules/metric/Makefile.am, configure.ac,
	man/cerebro_module.3.in: Adjust appropriately for new metrics.
	
2006-07-26  Albert Chu  <chu11@llnl.gov>

	* config/ac_cerebro_module_dir.m4: Revert changes to fix distcheck.
	
2006-07-07  Albert Chu  <chu11@llnl.gov>
